Fix alignment

--- a/src/components/theme.less
+++ b/src/components/theme.less
@@ -237,7 +237,6 @@ p {
 .custom-card h3 {
   font-size: 20px;
   color: #72a230;
-  text-align: center;
 }
 
 .custom-card h4 {
